--- a/charts/falcosidekick/templates/certs-secret.yaml
+++ b/charts/falcosidekick/templates/certs-secret.yaml
@@ -5,10 +5,7 @@ metadata:
   name: {{ include "falcosidekick.fullname" . }}-certs
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ include "falcosidekick.name" . }}
-    helm.sh/chart: {{ include "falcosidekick.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "falcosidekick.labels" . | nindent 4 }}
 type: Opaque
 data:
   {{ $key := .Values.config.tlsserver.serverkey }}
