--- a/charts/falcosidekick/templates/service.yaml
+++ b/charts/falcosidekick/templates/service.yaml
@@ -5,10 +5,7 @@ metadata:
   name: {{ include "falcosidekick.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ include "falcosidekick.name" . }}
-    helm.sh/chart: {{ include "falcosidekick.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "falcosidekick.labels" . | nindent 4 }}
   {{- with .Values.service.annotations }}
   annotations:
     prometheus.io/scrape: "true"
@@ -29,5 +26,4 @@ spec:
     {{- end }}
 
   selector:
-    app.kubernetes.io/name: {{ include "falcosidekick.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{- include "falcosidekick.selectorLabels" . | nindent 4 }}
