--- a/charts/falcosidekick/templates/podsecuritypolicy.yaml
+++ b/charts/falcosidekick/templates/podsecuritypolicy.yaml
@@ -4,10 +4,7 @@ kind: PodSecurityPolicy
 metadata:
   name: {{ template "falcosidekick.fullname" . }}
   labels:
-    app: {{ template "falcosidekick.fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    {{- include "falcosidekick.labels" . | nindent 4 }}
 spec:
   privileged: false
   allowPrivilegeEscalation: false
