--- a/charts/falcosidekick/templates/ingress-ui.yaml
+++ b/charts/falcosidekick/templates/ingress-ui.yaml
@@ -9,7 +9,10 @@ metadata:
   name: {{ $fullName }}-ui
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/name: {{ include "falcosidekick.name" . }}-ui
+    helm.sh/chart: {{ include "falcosidekick.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}-ui
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
   {{- with .Values.webui.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
