Add: missing recommanded labels
Signed-off-by: Nicolas Lamirault <nicolas.lamirault@gmail.com>

--- a/charts/falcosidekick/templates/aadpodidentity.yaml
+++ b/charts/falcosidekick/templates/aadpodidentity.yaml
@@ -5,6 +5,7 @@ kind: AzureIdentity
 metadata:
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/component: core
   name: {{ include "falcosidekick.fullname" . }}
   namespace: {{ .Release.Namespace }}
 spec:
