--- a/charts/falcosidekick/templates/podsecuritypolicy.yaml
+++ b/charts/falcosidekick/templates/podsecuritypolicy.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ template "falcosidekick.fullname" . }}
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/component: core
 spec:
   privileged: false
   allowPrivilegeEscalation: false
