--- a/charts/falcosidekick/templates/certs-secret.yaml
+++ b/charts/falcosidekick/templates/certs-secret.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/component: core
 type: Opaque
 data:
   {{ $key := .Values.config.tlsserver.serverkey }}
