--- a/charts/falcosidekick/templates/rbac.yaml
+++ b/charts/falcosidekick/templates/rbac.yaml
@@ -10,6 +10,7 @@ metadata:
   {{- end }}
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/component: core
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -18,6 +19,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/component: core
 rules:
 - apiGroups:
     - ""
@@ -43,6 +45,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/component: core
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -58,6 +61,7 @@ metadata:
   name: {{ include "falcosidekick.fullname" . }}
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/component: core
 rules:
 - apiGroups:
     - "wgpolicyk8s.io"
@@ -76,6 +80,7 @@ metadata:
   name: {{ include "falcosidekick.fullname" . }}
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/component: core
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
