--- a/charts/falcosidekick/templates/service.yaml
+++ b/charts/falcosidekick/templates/service.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/component: core
   {{- with .Values.service.annotations }}
   annotations:
     prometheus.io/scrape: "true"
