--- a/charts/falcosidekick/templates/rbac-ui.yaml
+++ b/charts/falcosidekick/templates/rbac-ui.yaml
@@ -5,10 +5,8 @@ metadata:
   name: {{ include "falcosidekick.fullname" . }}-ui
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ include "falcosidekick.name" . }}-ui
-    helm.sh/chart: {{ include "falcosidekick.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/component: ui
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -16,10 +14,8 @@ metadata:
   name: {{ include "falcosidekick.fullname" . }}-ui
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ include "falcosidekick.name" . }}-ui
-    helm.sh/chart: {{ include "falcosidekick.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/component: ui
 rules: []
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -28,10 +24,8 @@ metadata:
   name: {{ include "falcosidekick.fullname" . }}-ui
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ include "falcosidekick.name" . }}-ui
-    helm.sh/chart: {{ include "falcosidekick.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "falcosidekick.labels" . | nindent 4 }}
+    app.kubernetes.io/component: ui
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
