Changed label import
Signed-off-by: Juan Gonzalez <jgfm@novonordisk.com>

--- a/charts/falco/templates/client-certs-secret.yaml
+++ b/charts/falco/templates/client-certs-secret.yaml
@@ -5,10 +5,7 @@ metadata:
   name: {{ include "falco.fullname" . }}-client-certs
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ include "falco.name" . }}
-    helm.sh/chart: {{ include "falco.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "falco.labels" $ | nindent 4 }}
 type: Opaque
 data:
   {{ $key := .Values.certs.client.key }}
