--- a/tests/falco-test-ci.yaml
+++ b/tests/falco-test-ci.yaml
@@ -1,15 +1,11 @@
-# CI values for Falco.
-# To deploy Falco on CI we need to set an argument to bypass the installation
-# of the kernel module, so we bypass that.
-extra:
-  args:
-  - --userspace
-
 falco:
   grpc:
     enabled: true
   grpc_output:
     enabled: true
+  # Run Falco in no driver mode, to avoid injection of kernel modules or eBPF probes
+  engine:
+    kind: none
 
 driver:
   enabled: false
