new(falco): integrate k8s-metacollector and k8smeta plugin
The defualt mode to get kubernetes metadata is using the
k8s-metacollector and the k8smeta plugin. This commit
adds the required helpers and variables to enable the
k8s-metacollector by default.

Signed-off-by: Aldo Lacuku <aldo@lacuku.eu>

--- a/charts/falco/templates/configmap.yaml
+++ b/charts/falco/templates/configmap.yaml
@@ -8,4 +8,5 @@ metadata:
 data:
   falco.yaml: |-
     {{- include "falco.falcosidekickConfig" . }}
+    {{- include "k8smeta.configuration" . -}}
     {{- toYaml .Values.falco | nindent 4 }}
