--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
 
       - name: Set up Helm
         uses: azure/setup-helm@5119fcb9089d432beecbf79bb2c7915207344b78 # v3.5
+        with:
+          version: '3.10.3'
 
       - uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.0.0
         with:
@@ -78,5 +80,8 @@ jobs:
           go-version: '1.21'
           check-latest: true
 
-      - name: k8s-metacollector unit tests
+      - name: K8s-metacollector unit tests
         run: go test ./charts/k8s-metacollector/tests/unit/...
+
+      - name: Falco unit tests
+        run: go test ./charts/falco/tests/unit/...
