update(falco/driver)!: use the same names for drivers as falco
Please see: https://github.com/falcosecurity/falco/pull/2413.

Signed-off-by: Aldo Lacuku <aldo@lacuku.eu>

--- a/charts/falco/templates/configmap.yaml
+++ b/charts/falco/templates/configmap.yaml
@@ -9,4 +9,5 @@ data:
   falco.yaml: |-
     {{- include "falco.falcosidekickConfig" . }}
     {{- include "k8smeta.configuration" . -}}
+    {{- include "falco.engineConfiguration" . -}}
     {{- toYaml .Values.falco | nindent 4 }}
