--- a/charts/falco/values.yaml
+++ b/charts/falco/values.yaml
@@ -363,7 +363,7 @@ falcoctl:
     # -- The image repository to pull from.
     repository: falcosecurity/falcoctl
     # -- The image tag to pull.
-    tag: "main"
+    tag: "0.7.1"
   artifact:
     # -- Runs "falcoctl artifact install" command as an init container. It is used to install artfacts before
     # Falco starts. It provides them to Falco by using an emptyDir volume.
