update(k8s-metacollector): bump app version to 0.1.0
Signed-off-by: Aldo Lacuku <aldo@lacuku.eu>

--- a/charts/k8s-metacollector/values.yaml
+++ b/charts/k8s-metacollector/values.yaml
@@ -16,7 +16,7 @@ image:
   # -- repository is the image repository to pull from
   repository: falcosecurity/k8s-metacollector
   # -- tag is image tag to pull. Overrides the image tag whose default is the chart appVersion.
-  tag: "main"
+  tag: ""
 
 # -- nameOverride is the new name used to override the release name used for k8s-metacollector components.
 nameOverride: ""
