--- a/charts/falco/values.yaml
+++ b/charts/falco/values.yaml
@@ -26,6 +26,15 @@ namespaceOverride: ""
 # -- Add additional pod annotations
 podAnnotations: {}
 
+serviceAccount:
+  # -- Specifies whether a service account should be created.
+  create: false
+  # -- Annotations to add to the service account.
+  annotations: {}
+  # -- The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: ""
+
 # -- Add additional pod labels
 podLabels: {}
 
