update(falco-exporter): update docs
Furthermore, it adds the autogeneration of the configuration from the values.yaml file.

Signed-off-by: Aldo Lacuku <aldo@lacuku.eu>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Run Helm Docs and check the outcome
         run: |
-          for chart in event-generator falco k8s-metacollector; do
+          for chart in event-generator falco k8s-metacollector falco-exporter; do
             docker run \
               --rm \
               --workdir=/helm-docs \
