--- a/charts/falcosidekick/templates/servicemonitor.yaml
+++ b/charts/falcosidekick/templates/servicemonitor.yaml
@@ -12,7 +12,7 @@ metadata:
     {{- end }}
 spec:
   endpoints:
-  - port: metrics
+  - port: http
     {{- if .Values.serviceMonitor.interval }}
     interval: {{ .Values.serviceMonitor.interval }}
     {{- end }}
