[falcosidekick] fix: component label in matchers for servicemonitor
Signed-off-by: Thomas Berreis <thomas@berreis.de>

--- a/charts/falcosidekick/templates/servicemonitor.yaml
+++ b/charts/falcosidekick/templates/servicemonitor.yaml
@@ -22,4 +22,5 @@ spec:
   selector:
     matchLabels:
       {{- include "falcosidekick.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/component: core
 {{- end }}
