fix the labels for the serviceMonitor of falcosidekick
Signed-off-by: Thomas Labarussias <issif+github@gadz.org>

--- a/charts/falcosidekick/templates/servicemonitor.yaml
+++ b/charts/falcosidekick/templates/servicemonitor.yaml
@@ -21,6 +21,6 @@ spec:
     {{- end }}
   selector:
     matchLabels:
-      {{- include "falcosidekick.selectorLabels" . | nindent 6 }}
+      {{- include "falcosidekick.labels" . | nindent 6 }}
       app.kubernetes.io/component: core
 {{- end }}
