fix: value name and comments
Signed-off-by: David Calvert <david@0xdc.me>

--- a/charts/falco-exporter/values.yaml
+++ b/charts/falco-exporter/values.yaml
@@ -175,10 +175,10 @@ serviceMonitor:
 grafanaDashboard:
   # -- enabled specifies whether the dashboard should be deployed.
   enabled: false
-  # -- create and set folder_annotation to specify where the dashboard is stored in grafana.
+  # -- folder creates and set folderAnnotation to specify where the dashboard is stored in grafana.
   folder: ""
-  # -- annotation used by grafana when using folderAnnotation.
-  folder_annotation: "grafana_dashboard_folder"
+  # -- folderAnnotation sets the annotation's name used by folderAnnotation in grafana's helm-chart.
+  folderAnnotation: "grafana_dashboard_folder"
   # -- namespace specifies the namespace for the configmap.
   namespace: default
   # -- prometheusDatasourceName name of the data source.
