--- a/charts/falco-exporter/templates/grafana-dashboard.yaml
+++ b/charts/falco-exporter/templates/grafana-dashboard.yaml
@@ -305,7 +305,7 @@ metadata:
   {{- if .Values.grafanaDashboard.folder }}
   annotations:
     k8s-sidecar-target-directory: /tmp/dashboards/{{ .Values.grafanaDashboard.folder }}
-    {{ .Values.grafanaDashboard.folder_annotation }}: {{ .Values.grafanaDashboard.folder }}
+    {{ .Values.grafanaDashboard.folderAnnotation }}: {{ .Values.grafanaDashboard.folder }}
   {{- end }}
   name: grafana-falco
   {{- if .Values.grafanaDashboard.namespace }}
