CHART : falcosidekick service monitor update add aditionnal properties
Signed-off-by: Arnaud CHATELAIN <a.chatelain@actongroup.com>

--- a/charts/falcosidekick/templates/servicemonitor.yaml
+++ b/charts/falcosidekick/templates/servicemonitor.yaml
@@ -19,6 +19,9 @@ spec:
     {{- if .Values.serviceMonitor.scrapeTimeout }}
     scrapeTimeout: {{ .Values.serviceMonitor.scrapeTimeout }}
     {{- end }}
+    {{- with .Values.serviceMonitor.additionalProperties }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   selector:
     matchLabels:
       {{- include "falcosidekick.labels" . | nindent 6 }}
